--- a/Poultry/Disk/README
+++ b/Poultry/Disk/README
@@ -3,7 +3,10 @@ This will promote standardisation and ensure features work identically across th
 
 There are a couple of important methods to take into account here:
 
-grow_fs( image_file, device, new_size )
-shrink_fs( image_file, device, new_size )
+grow_fs( image_file, device, new_size, mountpoint )
+shrink_fs( image_file, device, new_size, mountpoint )
+
+We put the mountpoint last because for some filesystems it is worthless (ext3 testing uses this) and so
+a module may safely discard it.
 
 Others methods may be created as internals, but will never be called anywhere else
